--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171102.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171102.2 Prototyping.ipynb
@@ -94,11 +94,16 @@
    "outputs": [],
    "source": [
     "channel_boxes = []\n",
+    "channel_widgets = []\n",
     "for channel in frames.metadata[\"channels\"]:\n",
-    "    enabled = widgets.ToggleButton(description=channel, value=True)\n",
-    "    color = widgets.ColorPicker(concise=True, value=channel_colors[channel])\n",
-    "    channel_box = widgets.HBox([enabled, color])\n",
-    "    channel_boxes.append(channel_box)\n",
+    "    solo_button = widgets.ToggleButton(\n",
+    "        description=\"S\", layout=widgets.Layout(width=\"10%\")\n",
+    "    )\n",
+    "    enabled_button = widgets.ToggleButton(description=channel, value=True)\n",
+    "    color_picker = widgets.ColorPicker(concise=True, value=channel_colors[channel])\n",
+    "    channel_box = widgets.HBox([solo_button, enabled_button, color_picker])\n",
+    "    channel_widgets.append([solo_button, enabled_button, color_picker, channel_box])\n",
+    "solo_buttons, enabled_buttons, color_pickers, channel_boxes = zip(*channel_widgets)\n",
     "channels_box = widgets.VBox(channel_boxes)\n",
     "t_slider = widgets.IntSlider(\n",
     "    label=\"t\",\n",
@@ -126,12 +131,16 @@
     "\n",
     "\n",
     "def update_image(change):\n",
-    "    with output:\n",
+    "    # with output:\n",
+    "    if False:\n",
     "        clear_output(wait=True)\n",
     "        plt.figure(figsize=(8, 8))\n",
-    "        channel_enabled = [\n",
-    "            channel_box.children[0].value for channel_box in channel_boxes\n",
-    "        ]\n",
+    "        channel_enabled = np.array([button.value for button in enabled_buttons])\n",
+    "        for i, button in enumerate(solo_buttons):\n",
+    "            if button.value:\n",
+    "                channel_enabled[:i] = False\n",
+    "                channel_enabled[i] = True\n",
+    "                channel_enabled[i + 1 :] = False\n",
     "        channel_imgs = [\n",
     "            get_cached_image(c=i, t=t_slider.value, v=v_slider.value)\n",
     "            for i in range(n_channels)\n",
@@ -143,10 +152,6 @@
     "        for scaled_img in scaled_imgs:\n",
     "            np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
     "        colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
-    "        # img = colored_imgs[1]\n",
-    "        # for i in range(2, n_channels):\n",
-    "        #    img = 1 - (1 - img)*(1 - colored_imgs[i])\n",
-    "        # img = reduce(lambda a,b: 1-(1-a)*(1-b), [colored_imgs[i] for i in range(n_channels) if channel_enabled[i]])\n",
     "        imgs_to_combine = [\n",
     "            colored_imgs[i] for i in range(n_channels) if channel_enabled[i]\n",
     "        ]\n",
@@ -163,9 +168,24 @@
     "\n",
     "t_slider.observe(update_image, names=\"value\")\n",
     "v_slider.observe(update_image, names=\"value\")\n",
-    "for channel_box in channel_boxes:\n",
-    "    channel_box.children[0].observe(update_image, names=\"value\")\n",
-    "    channel_box.children[1].observe(update_image, names=\"value\")\n",
+    "\n",
+    "\n",
+    "def update_solo(change):\n",
+    "    for solo_button in solo_buttons:\n",
+    "        # display((solo_button == change['owner']))\n",
+    "        if solo_button != change[\"owner\"]:\n",
+    "            solo_button.value = False\n",
+    "            # solo_button.description = 'H'\n",
+    "    update_image(change)\n",
+    "\n",
+    "\n",
+    "for solo_button in solo_buttons:\n",
+    "    solo_button.observe(update_solo, names=\"value\")\n",
+    "\n",
+    "for enabled_button in enabled_buttons:\n",
+    "    enabled_button.observe(update_image, names=\"value\")\n",
+    "for color_picker in color_pickers:\n",
+    "    color_picker.observe(update_image, names=\"value\")\n",
     "\n",
     "# ui = interactive(f,\n",
     "#          t=t_slider,\n",
@@ -173,6 +193,15 @@
     "# output = plot.children[-1]\n",
     "# output.layout.height = '700px'\n",
     "# display(ui);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solo_button.observe?"
    ]
   },
   {
