Got holoviews/ipywidgets/datashader hooked up and working. Seemed slow on the HMS O2 cluster but the cluster seems slow in general today.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171102.3 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171102.3 Prototyping.ipynb
@@ -6,23 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext line_profiler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import holoviews as hv\n",
     "import datashader as ds\n",
-    "from holoviews.operation.datashader import aggregate, datashade, dynspread, shade\n",
+    "from holoviews.operation.datashader import (\n",
+    "    aggregate,\n",
+    "    datashade,\n",
+    "    dynspread,\n",
+    "    shade,\n",
+    "    regrid,\n",
+    ")\n",
     "from holoviews.operation import decimate\n",
+    "from holoviews.streams import Stream, param\n",
     "\n",
     "hv.notebook_extension(\"bokeh\")\n",
+    "renderer = hv.renderer(\"bokeh\")\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import hex2color\n",
@@ -32,22 +31,12 @@
     "import nd2reader\n",
     "import skimage\n",
     "import functools\n",
+    "from bokeh.models import WheelZoomTool\n",
+    "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
-    "# from bokeh.io import push_notebook, show, output_notebook\n",
     "# from bokeh.layouts import row\n",
-    "# from bokeh.plotting import figure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "decimate.max_samples = 1000\n",
-    "dynspread.max_px = 20\n",
-    "dynspread.threshold = 0.5\n",
-    "shade.cmap = \"#30a2da\"  # to match HV Bokeh default"
+    "# from bokeh.plotting import figure\n",
+    "%load_ext line_profiler"
    ]
   },
   {
@@ -102,6 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%output size=250\n",
+    "\n",
     "channel_boxes = []\n",
     "channel_widgets = []\n",
     "for channel in frames.metadata[\"channels\"]:\n",
@@ -132,44 +123,41 @@
     "\n",
     "max_val = 2**14\n",
     "\n",
-    "\n",
-    "@functools.lru_cache(50)\n",
-    "def get_cached_image(c=None, t=None, v=None):\n",
-    "    return frames.get_frame_2D(c=c, t=t, v=v)\n",
-    "\n",
-    "\n",
-    "def update_image(change):\n",
-    "    with output:\n",
-    "        clear_output(wait=True)\n",
-    "        plt.figure(figsize=(8, 8))\n",
-    "        channel_enabled = np.array([button.value for button in enabled_buttons])\n",
-    "        channel_imgs = [\n",
-    "            get_cached_image(c=i, t=t_slider.value, v=v_slider.value)\n",
-    "            for i in range(n_channels)\n",
-    "        ]\n",
-    "        scaled_imgs = [\n",
-    "            channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
-    "            for i in range(n_channels)\n",
-    "        ]\n",
-    "        for scaled_img in scaled_imgs:\n",
-    "            np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
-    "        colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
-    "        imgs_to_combine = [\n",
-    "            colored_imgs[i] for i in range(n_channels) if channel_enabled[i]\n",
-    "        ]\n",
-    "        if not len(imgs_to_combine):\n",
-    "            imgs_to_combine = [np.ones(colored_imgs[0].shape)]  # white placeholder\n",
-    "        img = imgs_to_combine[0]\n",
-    "        for img2 in imgs_to_combine[1:]:\n",
-    "            img = 1 - (1 - img) * (1 - img2)\n",
-    "        plt.imshow(img)\n",
-    "        plt.show()\n",
+    "Frame = Stream.define(\"Frame\", t=0, v=0)\n",
+    "frame = Frame()\n",
+    "DisplaySettings = Stream.define(\n",
+    "    \"DisplaySettings\", channel_enabled=np.array([True] * n_channels)\n",
+    ")\n",
+    "display_settings = DisplaySettings()\n",
     "\n",
     "\n",
-    "update_image(None)\n",
+    "def composite_image(t, v, channel_enabled):\n",
+    "    # def composite_image(t, v):\n",
+    "    # channel_enabled = [True] * n_channels\n",
+    "    channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    scaled_imgs = [\n",
+    "        channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
+    "        for i in range(n_channels)\n",
+    "    ]\n",
+    "    for scaled_img in scaled_imgs:\n",
+    "        np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
+    "    colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
+    "    imgs_to_combine = [colored_imgs[i] for i in range(n_channels) if channel_enabled[i]]\n",
+    "    if not len(imgs_to_combine):\n",
+    "        imgs_to_combine = [np.ones(colored_imgs[0].shape)]  # white placeholder\n",
+    "    img = imgs_to_combine[0]\n",
+    "    for img2 in imgs_to_combine[1:]:\n",
+    "        img = 1 - (1 - img) * (1 - img2)\n",
+    "    return hv.RGB(img, bounds=(-1, -1, 1, 1))  # .opts(plot={'size': 250}, tools=[''])\n",
     "\n",
-    "t_slider.observe(update_image, names=\"value\")\n",
-    "v_slider.observe(update_image, names=\"value\")\n",
+    "\n",
+    "t_slider.observe(lambda change: frame.event(t=change[\"new\"]), names=\"value\")\n",
+    "v_slider.observe(lambda change: frame.event(v=change[\"new\"]), names=\"value\")\n",
+    "\n",
+    "\n",
+    "def update_enabled_channels(change):\n",
+    "    channel_enabled = np.array([button.value for button in enabled_buttons])\n",
+    "    display_settings.event(channel_enabled=channel_enabled)\n",
     "\n",
     "\n",
     "def update_solo(solo_button):\n",
@@ -182,23 +170,29 @@
     "    else:\n",
     "        for enabled_button in enabled_buttons:\n",
     "            enabled_button.value = enabled_button == solo_button._button_to_enable\n",
-    "    # update_image(None)\n",
+    "    # update_enabled_channels(None)\n",
     "\n",
     "\n",
     "for solo_button in solo_buttons:\n",
     "    solo_button.on_click(update_solo)\n",
     "\n",
     "for enabled_button in enabled_buttons:\n",
-    "    enabled_button.observe(update_image, names=\"value\")\n",
-    "for color_picker in color_pickers:\n",
-    "    color_picker.observe(update_image, names=\"value\")\n",
+    "    enabled_button.observe(update_enabled_channels, names=\"value\")\n",
+    "# for color_picker in color_pickers:\n",
+    "#    color_picker.observe(update_image, names='value')\n",
     "\n",
-    "# ui = interactive(f,\n",
-    "#          t=t_slider,\n",
-    "#          v=v_slider)\n",
-    "# output = plot.children[-1]\n",
-    "# output.layout.height = '700px'\n",
-    "# display(ui);"
+    "# hv.DynamicMap(composite_image, kdims=['t', 'v', 'channel_enabled']).select(t=0,v=0,channel_enabled=np.array([True,False,False,False,False]))\n",
+    "image_viewer = hv.DynamicMap(composite_image, streams=[frame, display_settings])\n",
+    "regrid(image_viewer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame.event(v=0)"
    ]
   },
   {
@@ -258,7 +252,172 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_rgb = np.random.randint(256, size=(512, 512, 3), dtype=np.uint8)\n",
+    "image_rgb_dict = {1: hv.RGB(image_rgb)}\n",
+    "image_rgb_holomap = hv.HoloMap(image_rgb_dict, kdims=[\"frame\"])\n",
+    "regrid(image_rgb_holomap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im0 = hv.Image(img[:, :, 0], bounds=(-1, -1, 1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(im0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im = hv.RGB(img[:50, :50, :], bounds=(-1, -1, 1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=250\n",
+    "regrid(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.imshow(colored_imgs[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im.defaults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.help(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renderer.params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# renderer = hv.renderer('bokeh')\n",
+    "plot = renderer.get_plot(im)\n",
+    "plot.state.toolbar.active_scroll = WheelZoomTool()\n",
+    "show(plot.state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.state.title = \"h\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.state.tools = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im"
    ]
   },
   {
