Picked preliminary settings for zarr lossless compression. Found that quantizing integers drastically improved image compression. Initial implementation of hough transform and k-means to find trenches.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171106.3 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171106.3 Prototyping.ipynb
@@ -25,13 +25,24 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
     "import nd2reader\n",
+    "from numcodecs import Blosc, Delta\n",
+    "import zarr\n",
     "import skimage\n",
+    "import skimage.morphology\n",
+    "import sklearn\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "# from sklearn import metrics\n",
+    "# from sklearn.datasets.samples_generator import make_blobs\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import functools\n",
+    "from collections import Counter\n",
     "from bokeh.models import WheelZoomTool\n",
     "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
     "# from bokeh.layouts import row\n",
-    "# from bokeh.plotting import figure"
+    "# from bokeh.plotting import figure\n",
+    "from tqdm import tnrange, tqdm_notebook"
    ]
   },
   {
@@ -52,6 +63,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frames_z = zarr.open_array(\"/home/jqs1/scratch/fidelity/test/171018.zarr\", mode=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frames = nd2reader.ND2Reader(\n",
     "    \"/home/jqs1/scratch/fidelity/171018/20171018_TrxnError_ID.nd2\"\n",
     ")"
@@ -63,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emission_wavelengths = {\"MCHERRY\": 583, \"GFP\": 508, \"CY5\": 670, \"BFP\": 448, \"CFP\": 480}"
+    "frames_z.shape"
    ]
   },
   {
@@ -78,18 +98,8 @@
     "    \"GFP\": \"#76ba40\",\n",
     "    \"CY5\": \"#e292fe\",\n",
     "    \"BFP\": \"#3a87fd\",\n",
+    "    \"YFP\": \"#f5eb00\",\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels = frames.metadata[\"channels\"]\n",
-    "n_channels = len(channels)\n",
-    "colors = [hex2color(channel_colors[channel]) for channel in channels]"
    ]
   },
   {
@@ -100,9 +110,15 @@
    "source": [
     "%%output size=250\n",
     "\n",
+    "channels = frames_z.attrs[\"metadata\"][\"channels\"]\n",
+    "n_channels = len(channels)\n",
+    "colors = [hex2color(channel_colors[channel]) for channel in channels]\n",
+    "num_timepoints = len(frames_z.attrs[\"metadata\"][\"frames\"])\n",
+    "num_fovs = len(frames_z.attrs[\"metadata\"][\"fields_of_view\"])\n",
+    "\n",
     "channel_boxes = []\n",
     "channel_widgets = []\n",
-    "for channel in frames.metadata[\"channels\"]:\n",
+    "for channel in channels:\n",
     "    solo_button = widgets.Button(description=\"S\", layout=widgets.Layout(width=\"10%\"))\n",
     "    enabled_button = widgets.ToggleButton(description=channel, value=True)\n",
     "    solo_button._button_to_enable = enabled_button\n",
@@ -112,15 +128,10 @@
     "solo_buttons, enabled_buttons, color_pickers, channel_boxes = zip(*channel_widgets)\n",
     "channels_box = widgets.VBox(channel_boxes)\n",
     "t_slider = widgets.IntSlider(\n",
-    "    label=\"t\",\n",
-    "    min=0,\n",
-    "    max=frames.sizes[\"t\"] - 1,\n",
-    "    step=1,\n",
-    "    value=0,\n",
-    "    continuous_update=False,\n",
+    "    label=\"t\", min=0, max=num_timepoints, step=1, value=0, continuous_update=False\n",
     ")\n",
     "v_slider = widgets.IntSlider(\n",
-    "    min=0, max=frames.sizes[\"v\"] - 1, step=1, value=0, continuous_update=False\n",
+    "    min=0, max=num_fovs, step=1, value=0, continuous_update=False\n",
     ")\n",
     "slider_box = widgets.VBox([v_slider, t_slider])\n",
     "control_box = widgets.HBox([channels_box, slider_box])\n",
@@ -141,7 +152,8 @@
     "def composite_image(t, v, channel_enabled):\n",
     "    # def composite_image(t, v):\n",
     "    # channel_enabled = [True] * n_channels\n",
-    "    channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    # channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    channel_imgs = [frames_z[v, c, t, :, :] for c in range(n_channels)]\n",
     "    scaled_imgs = [\n",
     "        channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
     "        for i in range(n_channels)\n",
@@ -199,7 +211,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame.event(v=0)"
+    "a_stack = frames_z[0, :, :, 300:500, :1000]\n",
+    "a = a_stack[0, 0]"
    ]
   },
   {
@@ -208,7 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%lprun -f update_image update_image(None)"
+    "%%time\n",
+    "f0 = frames_z[0, 0, :].max(axis=0)"
    ]
   },
   {
@@ -217,7 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel_imgs = [frames.get_frame_2D(c=i, t=0, v=0) for i in range(5)]"
+    "%%time\n",
+    "f01 = frames_z[0, 1, :].max(axis=0)"
    ]
   },
   {
@@ -226,22 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# colored_imgs = [channel_imgs[i][:,:,np.newaxis] / max_val * np.array(colors[i]) for i in range(1,n_channels) if channel_enabled[i]]\n",
-    "scaled_imgs = [\n",
-    "    channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
-    "    for i in range(n_channels)\n",
-    "]\n",
-    "for scaled_img in scaled_imgs:\n",
-    "    np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
-    "colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
-    "img = colored_imgs[1]\n",
-    "for i in range(2, n_channels):\n",
-    "    img = 1 - (1 - img) * (1 - colored_imgs[i])\n",
-    "# img = np.sum(colored_imgs, axis=0)# / sum(channel_enabled[1:])\n",
-    "# if channel_enabled[0]:\n",
-    "#    img = 0.7*img + 0.3*colored_imgs[0]\n",
-    "## SCREEN\n",
-    "# img = 1 - (1 - img)*(1 - colored_imgs[0])"
+    "f1 = f0 - np.percentile(f0, 0.5, axis=1)[:, np.newaxis]"
    ]
   },
   {
@@ -250,7 +250,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(img)"
+    "f1_b = skimage.filters.gaussian(f1, 3)\n",
+    "f1_v = skimage.filters.sobel_v(f1_b)\n",
+    "f1_v2 = skimage.filters.sobel_v(f1_v)"
    ]
   },
   {
@@ -259,10 +261,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_rgb = np.random.randint(256, size=(512, 512, 3), dtype=np.uint8)\n",
-    "image_rgb_dict = {1: hv.RGB(image_rgb)}\n",
-    "image_rgb_holomap = hv.HoloMap(image_rgb_dict, kdims=[\"frame\"])\n",
-    "regrid(image_rgb_holomap)"
+    "def hessian_eigenvalues(img):\n",
+    "    I = skimage.filters.gaussian(img, 1.5)\n",
+    "    I_x = skimage.filters.sobel_h(I)\n",
+    "    I_y = skimage.filters.sobel_v(I)\n",
+    "    I_xx = skimage.filters.sobel_h(I_x)\n",
+    "    I_xy = skimage.filters.sobel_v(I_x)\n",
+    "    I_yx = skimage.filters.sobel_h(I_y)\n",
+    "    I_yy = skimage.filters.sobel_v(I_y)\n",
+    "    kappa_1 = (I_xx + I_yy) / 2\n",
+    "    kappa_2 = (np.sqrt((I_xx + I_yy) ** 2 - 4 * (I_xx * I_yy - I_xy * I_yx))) / 2\n",
+    "    k1 = kappa_1 + kappa_2\n",
+    "    k2 = kappa_1 - kappa_2\n",
+    "    k1[np.isnan(k1)] = 0\n",
+    "    k2[np.isnan(k2)] = 0\n",
+    "    return k1, k2"
    ]
   },
   {
@@ -271,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im0 = hv.Image(img[:, :, 0], bounds=(-1, -1, 1, 1))"
+    "f1_k1, f1_k2 = hessian_eigenvalues(f1_b)"
    ]
   },
   {
@@ -280,7 +293,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im0"
+    "f2 = f1 > skimage.filters.threshold_otsu(f1)\n",
+    "# f2 = skimage.morphology.convex_hull_object(f2)\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(f2)"
    ]
   },
   {
@@ -289,7 +305,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regrid(im0)"
+    "X = np.array(np.where(f2)).T\n",
+    "X2 = StandardScaler().fit_transform(X.astype(np.float32))\n",
+    "fit = sklearn.cluster.MiniBatchKMeans(\n",
+    "    init=\"k-means++\", n_clusters=2, n_init=10, max_no_improvement=10, verbose=0\n",
+    ")"
    ]
   },
   {
@@ -298,7 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im = hv.RGB(img[:50, :50, :], bounds=(-1, -1, 1, 1))"
+    "%%time\n",
+    "fit.fit(X2)"
    ]
   },
   {
@@ -307,7 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im"
+    "label_img = np.zeros_like(f1)\n",
+    "for i in range(len(fit.labels_)):\n",
+    "    label_img[X[i, 0], X[i, 1]] = fit.labels_[i] + 1"
    ]
   },
   {
@@ -316,8 +339,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%output size=250\n",
-    "regrid(im)"
+    "counter = Counter(fit.labels_)\n",
+    "total = sum(counter.values())\n",
+    "good_labels = []\n",
+    "for label, count in counter.items():\n",
+    "    print(count / total)\n",
+    "    if count / total > 0.01:\n",
+    "        good_labels.append(label)"
    ]
   },
   {
@@ -326,7 +354,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(colored_imgs[4])"
+    "good_labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trench detection"
    ]
   },
   {
@@ -335,7 +370,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im.defaults()"
+    "label_img_rot = skimage.transform.rotate(label_img, 37, cval=0)  # , resize=True)\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(label_img_rot)"
    ]
   },
   {
@@ -344,7 +381,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.help(im)"
+    "def detect_trenches(thresholded_img):\n",
+    "    h, theta, d = skimage.transform.hough_line(thresholded_img)\n",
+    "    plt.figure(figsize=(20, 12))\n",
+    "    plt.imshow(h, aspect=0.05)\n",
+    "    abs_diff_h = np.diff(h.astype(np.int32), axis=1).var(axis=0)\n",
+    "    plt.figure(figsize=(20, 12))\n",
+    "    plt.plot(abs_diff_h)\n",
+    "    theta_idx = abs_diff_h.argmax()\n",
+    "    theta = theta[theta_idx]\n",
+    "    print(theta)\n",
+    "    h2, theta2, d2 = skimage.transform.hough_line(\n",
+    "        thresholded_img, theta=np.linspace(0.9 * theta, 1.1 * theta, 200)\n",
+    "    )\n",
+    "    plt.figure(figsize=(40, 40))\n",
+    "    plt.imshow(h2, aspect=0.05)\n",
+    "    abs_diff_h2 = np.diff(h2.astype(np.int32), axis=1).var(axis=0)\n",
+    "    plt.figure(figsize=(20, 12))\n",
+    "    plt.plot(abs_diff_h2)\n",
+    "    theta_idx2 = abs_diff_h2.argmax()\n",
+    "    theta2 = theta2[theta_idx2]\n",
+    "    print(theta2)\n",
+    "\n",
+    "\n",
+    "detect_trenches(label_img_rot == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detect_trenches(label_img == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kt = k2 > 0.5 * skimage.filters.threshold_otsu(k2)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(kt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kt = k1 > 0.5 * skimage.filters.threshold_otsu(k1)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(kt)"
    ]
   },
   {
@@ -359,15 +457,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "plot.__class__"
+    "# rough trench finding using linear hough on thresholded k2 or thresholded intensity (?)\n",
+    "# oval hough transform to find cells"
    ]
   },
   {
@@ -376,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renderer.params"
+    "plt.imshow(skimage.measure.label(1 - kt))"
    ]
   },
   {
@@ -385,10 +477,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# renderer = hv.renderer('bokeh')\n",
-    "plot = renderer.get_plot(im)\n",
-    "plot.state.toolbar.active_scroll = WheelZoomTool()\n",
-    "show(plot.state)"
+    "skimage.measure.label(1 - kt)"
    ]
   },
   {
@@ -397,34 +486,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.state.title = \"h\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.state.tools = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im"
+    "num_timesteps = a_stack.shape[1]\n",
+    "play = widgets.Play(\n",
+    "    # interval=10,\n",
+    "    value=0,\n",
+    "    min=0,\n",
+    "    max=num_timesteps,\n",
+    "    step=1,\n",
+    "    description=\"Press play\",\n",
+    "    disabled=False,\n",
+    ")\n",
+    "time_slider = widgets.IntSlider(min=0, max=num_timesteps, continuous_update=False)\n",
+    "widgets.jslink((play, \"value\"), (time_slider, \"value\"))\n",
+    "output = widgets.Output()\n",
+    "box = widgets.VBox([widgets.HBox([play, time_slider]), output])\n",
+    "\n",
+    "\n",
+    "def f(t):\n",
+    "    with output:\n",
+    "        z = hessian_eigenvalues(a_stack[0, t])[0]\n",
+    "        clear_output(wait=True)\n",
+    "        plt.figure(figsize=(20, 12))\n",
+    "        plt.imshow(z)\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "interactive(f, t=time_slider)\n",
+    "box"
    ]
   },
   {
