--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171102.4 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171102.4 Prototyping.ipynb
@@ -25,13 +25,16 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
     "import nd2reader\n",
+    "from numcodecs import Blosc, Delta\n",
+    "import zarr\n",
     "import skimage\n",
     "import functools\n",
     "from bokeh.models import WheelZoomTool\n",
     "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
     "# from bokeh.layouts import row\n",
-    "# from bokeh.plotting import figure"
+    "# from bokeh.plotting import figure\n",
+    "from tqdm import tnrange, tqdm_notebook"
    ]
   },
   {
@@ -52,9 +55,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frames_z = zarr.open_array(\"/home/jqs1/scratch/fidelity/test/171018_.zarr\", mode=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frames = nd2reader.ND2Reader(\n",
     "    \"/home/jqs1/scratch/fidelity/171018/20171018_TrxnError_ID.nd2\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_ary = np.stack(\n",
+    "    [\n",
+    "        np.stack(\n",
+    "            [\n",
+    "                np.stack(\n",
+    "                    [\n",
+    "                        frames.get_frame_2D(c=c, t=t, v=v)\n",
+    "                        for t in range(frames.sizes[\"t\"])\n",
+    "                    ]\n",
+    "                )\n",
+    "                for c in range(frames.sizes[\"c\"])\n",
+    "            ]\n",
+    "        )\n",
+    "        for v in tnrange(frames.sizes[\"v\"])\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames_ary.shape"
    ]
   },
   {
@@ -141,7 +186,8 @@
     "def composite_image(t, v, channel_enabled):\n",
     "    # def composite_image(t, v):\n",
     "    # channel_enabled = [True] * n_channels\n",
-    "    channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    # channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    channel_imgs = [frames_z[v, c, t, :, :] for c in range(n_channels)]\n",
     "    scaled_imgs = [\n",
     "        channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
     "        for i in range(n_channels)\n",
@@ -191,240 +237,6 @@
     "# hv.DynamicMap(composite_image, kdims=['t', 'v', 'channel_enabled']).select(t=0,v=0,channel_enabled=np.array([True,False,False,False,False]))\n",
     "image_viewer = hv.DynamicMap(composite_image, streams=[frame, display_settings])\n",
     "regrid(image_viewer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame.event(v=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%lprun -f update_image update_image(None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channel_imgs = [frames.get_frame_2D(c=i, t=0, v=0) for i in range(5)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colored_imgs = [channel_imgs[i][:,:,np.newaxis] / max_val * np.array(colors[i]) for i in range(1,n_channels) if channel_enabled[i]]\n",
-    "scaled_imgs = [\n",
-    "    channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
-    "    for i in range(n_channels)\n",
-    "]\n",
-    "for scaled_img in scaled_imgs:\n",
-    "    np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
-    "colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
-    "img = colored_imgs[1]\n",
-    "for i in range(2, n_channels):\n",
-    "    img = 1 - (1 - img) * (1 - colored_imgs[i])\n",
-    "# img = np.sum(colored_imgs, axis=0)# / sum(channel_enabled[1:])\n",
-    "# if channel_enabled[0]:\n",
-    "#    img = 0.7*img + 0.3*colored_imgs[0]\n",
-    "## SCREEN\n",
-    "# img = 1 - (1 - img)*(1 - colored_imgs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_rgb = np.random.randint(256, size=(512, 512, 3), dtype=np.uint8)\n",
-    "image_rgb_dict = {1: hv.RGB(image_rgb)}\n",
-    "image_rgb_holomap = hv.HoloMap(image_rgb_dict, kdims=[\"frame\"])\n",
-    "regrid(image_rgb_holomap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im0 = hv.Image(img[:, :, 0], bounds=(-1, -1, 1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(im0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im = hv.RGB(img[:50, :50, :], bounds=(-1, -1, 1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=250\n",
-    "regrid(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(colored_imgs[4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im.defaults()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.help(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.__class__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "renderer.params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# renderer = hv.renderer('bokeh')\n",
-    "plot = renderer.get_plot(im)\n",
-    "plot.state.toolbar.active_scroll = WheelZoomTool()\n",
-    "show(plot.state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.state.title = \"h\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.state.tools = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.state"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im"
    ]
   },
   {
