--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171103 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171103 Prototyping.ipynb
@@ -25,13 +25,16 @@
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
     "import nd2reader\n",
+    "from numcodecs import Blosc, Delta\n",
+    "import zarr\n",
     "import skimage\n",
     "import functools\n",
     "from bokeh.models import WheelZoomTool\n",
     "from bokeh.io import push_notebook, show, output_notebook\n",
     "\n",
     "# from bokeh.layouts import row\n",
-    "# from bokeh.plotting import figure"
+    "# from bokeh.plotting import figure\n",
+    "from tqdm import tnrange, tqdm_notebook"
    ]
   },
   {
@@ -52,6 +55,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frames_z = zarr.open_array(\"/home/jqs1/scratch/fidelity/test/171018.zarr\", mode=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frames = nd2reader.ND2Reader(\n",
     "    \"/home/jqs1/scratch/fidelity/171018/20171018_TrxnError_ID.nd2\"\n",
     ")"
@@ -63,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emission_wavelengths = {\"MCHERRY\": 583, \"GFP\": 508, \"CY5\": 670, \"BFP\": 448, \"CFP\": 480}"
+    "frames_z.shape"
    ]
   },
   {
@@ -78,18 +90,8 @@
     "    \"GFP\": \"#76ba40\",\n",
     "    \"CY5\": \"#e292fe\",\n",
     "    \"BFP\": \"#3a87fd\",\n",
+    "    \"YFP\": \"#f5eb00\",\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels = frames.metadata[\"channels\"]\n",
-    "n_channels = len(channels)\n",
-    "colors = [hex2color(channel_colors[channel]) for channel in channels]"
    ]
   },
   {
@@ -100,9 +102,15 @@
    "source": [
     "%%output size=250\n",
     "\n",
+    "channels = frames_z.attrs[\"metadata\"][\"channels\"]\n",
+    "n_channels = len(channels)\n",
+    "colors = [hex2color(channel_colors[channel]) for channel in channels]\n",
+    "num_timepoints = len(frames_z.attrs[\"metadata\"][\"frames\"])\n",
+    "num_fovs = len(frames_z.attrs[\"metadata\"][\"fields_of_view\"])\n",
+    "\n",
     "channel_boxes = []\n",
     "channel_widgets = []\n",
-    "for channel in frames.metadata[\"channels\"]:\n",
+    "for channel in channels:\n",
     "    solo_button = widgets.Button(description=\"S\", layout=widgets.Layout(width=\"10%\"))\n",
     "    enabled_button = widgets.ToggleButton(description=channel, value=True)\n",
     "    solo_button._button_to_enable = enabled_button\n",
@@ -112,15 +120,10 @@
     "solo_buttons, enabled_buttons, color_pickers, channel_boxes = zip(*channel_widgets)\n",
     "channels_box = widgets.VBox(channel_boxes)\n",
     "t_slider = widgets.IntSlider(\n",
-    "    label=\"t\",\n",
-    "    min=0,\n",
-    "    max=frames.sizes[\"t\"] - 1,\n",
-    "    step=1,\n",
-    "    value=0,\n",
-    "    continuous_update=False,\n",
+    "    label=\"t\", min=0, max=num_timepoints, step=1, value=0, continuous_update=False\n",
     ")\n",
     "v_slider = widgets.IntSlider(\n",
-    "    min=0, max=frames.sizes[\"v\"] - 1, step=1, value=0, continuous_update=False\n",
+    "    min=0, max=num_fovs, step=1, value=0, continuous_update=False\n",
     ")\n",
     "slider_box = widgets.VBox([v_slider, t_slider])\n",
     "control_box = widgets.HBox([channels_box, slider_box])\n",
@@ -141,7 +144,8 @@
     "def composite_image(t, v, channel_enabled):\n",
     "    # def composite_image(t, v):\n",
     "    # channel_enabled = [True] * n_channels\n",
-    "    channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    # channel_imgs = [frames.get_frame_2D(c=i, t=t, v=v) for i in range(n_channels)]\n",
+    "    channel_imgs = [frames_z[v, c, t, :, :] for c in range(n_channels)]\n",
     "    scaled_imgs = [\n",
     "        channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
     "        for i in range(n_channels)\n",
@@ -199,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame.event(v=0)"
+    "a = frames_z[0, 0, 0, 300:500, :1000]"
    ]
   },
   {
@@ -208,106 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%lprun -f update_image update_image(None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channel_imgs = [frames.get_frame_2D(c=i, t=0, v=0) for i in range(5)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# colored_imgs = [channel_imgs[i][:,:,np.newaxis] / max_val * np.array(colors[i]) for i in range(1,n_channels) if channel_enabled[i]]\n",
-    "scaled_imgs = [\n",
-    "    channel_imgs[i][:, :, np.newaxis] / np.percentile(channel_imgs[i], 99.9)\n",
-    "    for i in range(n_channels)\n",
-    "]\n",
-    "for scaled_img in scaled_imgs:\n",
-    "    np.clip(scaled_img, 0, 1, scaled_img)  # clip in place\n",
-    "colored_imgs = [scaled_imgs[i] * np.array(colors[i]) for i in range(n_channels)]\n",
-    "img = colored_imgs[1]\n",
-    "for i in range(2, n_channels):\n",
-    "    img = 1 - (1 - img) * (1 - colored_imgs[i])\n",
-    "# img = np.sum(colored_imgs, axis=0)# / sum(channel_enabled[1:])\n",
-    "# if channel_enabled[0]:\n",
-    "#    img = 0.7*img + 0.3*colored_imgs[0]\n",
-    "## SCREEN\n",
-    "# img = 1 - (1 - img)*(1 - colored_imgs[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_rgb = np.random.randint(256, size=(512, 512, 3), dtype=np.uint8)\n",
-    "image_rgb_dict = {1: hv.RGB(image_rgb)}\n",
-    "image_rgb_holomap = hv.HoloMap(image_rgb_dict, kdims=[\"frame\"])\n",
-    "regrid(image_rgb_holomap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im0 = hv.Image(img[:, :, 0], bounds=(-1, -1, 1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(im0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im = hv.RGB(img[:50, :50, :], bounds=(-1, -1, 1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "im"
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(a)"
    ]
   },
   {
@@ -317,7 +223,10 @@
    "outputs": [],
    "source": [
     "%%output size=250\n",
-    "regrid(im)"
+    "b = skimage.filters.scharr(a)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(b)\n",
+    "# hv.Image(b)"
    ]
   },
   {
@@ -326,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(colored_imgs[4])"
+    "b2 = skimage.filters.gaussian(a, sigma=2)"
    ]
   },
   {
@@ -335,7 +244,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im.defaults()"
+    "c_h = skimage.filters.sobel_h(b2)\n",
+    "c_v = skimage.filters.sobel_v(b2)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(c_h)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(c_v)"
    ]
   },
   {
@@ -344,30 +258,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.help(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot.__class__"
+    "c2_h = skimage.filters.sobel_h(c_h)\n",
+    "c2_v = skimage.filters.sobel_v(c_v)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(c2_h)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(c2_v)"
    ]
   },
   {
@@ -376,7 +272,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "renderer.params"
+    "I = skimage.filters.gaussian(a, 1.5)\n",
+    "I_x = skimage.filters.sobel_h(I)\n",
+    "I_y = skimage.filters.sobel_v(I)\n",
+    "I_xx = skimage.filters.sobel_h(I_x)\n",
+    "I_xy = skimage.filters.sobel_v(I_x)\n",
+    "I_yx = skimage.filters.sobel_h(I_y)\n",
+    "I_yy = skimage.filters.sobel_v(I_y)\n",
+    "kappa_1 = (I_xx + I_yy) / 2\n",
+    "kappa_2 = (np.sqrt((I_xx + I_yy) ** 2 - 4 * (I_xx * I_yy - I_xy * I_yx))) / 2\n",
+    "k1 = kappa_1 + kappa_2\n",
+    "k2 = kappa_1 - kappa_2\n",
+    "k1[np.isnan(k1)] = 0  # np.percentile(k1, 90)\n",
+    "k2[np.isnan(k2)] = 0  # np.percentile(k2, 90)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(k1)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(k2)"
    ]
   },
   {
@@ -385,10 +297,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# renderer = hv.renderer('bokeh')\n",
-    "plot = renderer.get_plot(im)\n",
-    "plot.state.toolbar.active_scroll = WheelZoomTool()\n",
-    "show(plot.state)"
+    "w = skimage.morphology.watershed\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(w)"
    ]
   },
   {
@@ -397,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.state.title = \"h\""
+    "skimage.filters.threshold_otsu?"
    ]
   },
   {
@@ -406,7 +317,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.state.tools = []"
+    "kt = k2 > 0.5 * skimage.filters.threshold_otsu(k2)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(kt)"
    ]
   },
   {
@@ -415,7 +328,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.state"
+    "kt = k1 > skimage.filters.threshold_otsu(k1)\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "plt.imshow(kt)"
    ]
   },
   {
@@ -424,7 +339,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "im"
+    "# rough trench finding using linear hough on thresholded k2 or thresholded intensity (?)\n",
+    "# oval hough transform to find cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(skimage.measure.label(1 - kt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skimage.measure.label(1 - kt)"
    ]
   },
   {
