Playing around with trigonometry. Almost finished trench finding.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171115 Prototyping.ipynb
@@ -415,6 +415,7 @@
     "    peaks = d2[peak_idxs]\n",
     "    spacing = scipy.stats.mode(np.diff(peaks)).mode[0]\n",
     "    print(spacing)\n",
+    "    print(peaks[0], peaks[-1], angle2)\n",
     "    plt.figure(figsize=(20, 12))\n",
     "    plt.imshow(thresholded_img)\n",
     "    angle = angle2\n",
@@ -432,7 +433,7 @@
     "        length = int(np.hypot(y_max - 0, y1 - y0))\n",
     "        xs = np.linspace(0, y_max - 1, length).astype(np.int)\n",
     "        ys = np.linspace(y0, y1 - 1, length).astype(np.int)\n",
-    "        trench_profiles.append(img[xs, ys])\n",
+    "        # trench_profiles.append(img[xs, ys])\n",
     "    plt.xlim((0, img.shape[1]))\n",
     "    plt.ylim((img.shape[0], 0))\n",
     "    plt.figure(figsize=(8, 8))\n",
@@ -449,7 +450,130 @@
     "    #    s += zi.sum()\n",
     "\n",
     "\n",
-    "detect_trenches(label_img_rot == 1, f1_rot)"
+    "detect_trenches(label_img_rot == 1, label_img_rot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theta = -0.245107021791\n",
+    "x_min = y_min = 0\n",
+    "x_max, y_max = label_img_rot.shape\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(label_img_rot == 1)\n",
+    "plt.plot([])\n",
+    "anchor0 = np.array([x_min, y_max])\n",
+    "anchor1 = np.array([x_max, y_min])\n",
+    "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
+    "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
+    "for s in np.linspace(0, 1, 10):\n",
+    "    anchor = (1 - s) * anchor0 + s * anchor1\n",
+    "    # x0 = np.array([anchor[0], y_min])\n",
+    "    # x1 = np.array([anchor[0], y_max])\n",
+    "    x0 = np.array([anchor[0] + (anchor[1] - y_min) * np.sin(theta), y_min])\n",
+    "    x1 = np.array([anchor[0] - (y_max - anchor[1]) * np.sin(theta), y_max])\n",
+    "    line = np.vstack((x0, x1)).T\n",
+    "    plt.plot(*line, color=\"w\")\n",
+    "    plt.gca().add_artist(plt.Circle(anchor, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop_line(x0, x1, x_lim, y_lim):\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if x0[0] < x_min:\n",
+    "        slope = (x1[1] - x0[1]) / (x1[0] - x0[0])\n",
+    "        x0 = np.array([x_min, (x_min - x1[0]) * slope + x1[1]])\n",
+    "    if x1[0] > x_max:\n",
+    "        slope = (x1[1] - x0[1]) / (x1[0] - x0[0])\n",
+    "        x1 = np.array([x_max, (x_max - x1[0]) * slope + x1[1]])\n",
+    "    return x0, x1\n",
+    "\n",
+    "\n",
+    "theta = -1.7  # np.pi/2#0#-0.245107021791\n",
+    "x_min = y_min = 0\n",
+    "x_max, y_max = label_img_rot.shape\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(label_img_rot == 1)\n",
+    "plt.plot([])\n",
+    "anchor0 = np.array([x_min, y_max])\n",
+    "anchor1 = np.array([x_max, y_min])\n",
+    "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
+    "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
+    "for s in np.linspace(0, 1, 50)[1:-1]:\n",
+    "    anchor = (1 - s) * anchor0 + s * anchor1\n",
+    "    # x0 = np.array([anchor[0], y_min])\n",
+    "    # x1 = np.array([anchor[0], y_max])\n",
+    "    x0 = np.array([anchor[0] + (anchor[1] - y_min) * np.sin(theta), y_min])\n",
+    "    x1 = np.array([anchor[0] - (y_max - anchor[1]) * np.sin(theta), y_max])\n",
+    "    # x0, x1 = crop_line(x0, x1, [x_min, x_max], [y_min, y_max])\n",
+    "    line = np.vstack((x0, x1)).T\n",
+    "    plt.plot(*line, color=\"w\")\n",
+    "    plt.gca().add_artist(plt.Circle(anchor, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop_line(x0, x1, x_lim, y_lim):\n",
+    "    x_min, x_max = x_lim\n",
+    "    y_min, y_max = y_lim\n",
+    "    if x0[0] < x_min:\n",
+    "        slope = (x1[1] - x0[1]) / (x1[0] - x0[0])\n",
+    "        x0 = np.array([x_min, (x_min - x1[0]) * slope + x1[1]])\n",
+    "    if x1[0] > x_max:\n",
+    "        slope = (x1[1] - x0[1]) / (x1[0] - x0[0])\n",
+    "        x1 = np.array([x_max, (x_max - x1[0]) * slope + x1[1]])\n",
+    "    return x0, x1\n",
+    "\n",
+    "\n",
+    "theta = -0.4  # -1.7#np.pi/2#0#-0.245107021791\n",
+    "x_min = y_min = 0\n",
+    "x_max, y_max = label_img_rot.shape\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(label_img_rot == 1)\n",
+    "plt.plot([])\n",
+    "anchor0 = np.array([x_min, y_max])\n",
+    "anchor1 = np.array([x_max, y_min])\n",
+    "plt.gca().add_artist(plt.Circle(anchor0, 50, color=\"g\"))\n",
+    "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
+    "for s in np.linspace(0, 1, 50)[1:-1]:\n",
+    "    anchor = (1 - s) * anchor0 + s * anchor1\n",
+    "    angle_to_corner = np.arctan2(-anchor[0], anchor[1])\n",
+    "    # print(angle_to_corner)\n",
+    "    # x0 = np.array([anchor[0], y_min])\n",
+    "    # x1 = np.array([anchor[0], y_max])\n",
+    "    # x0 = np.array([anchor[0] + (anchor[1] - y_min)*np.sin(theta), y_min])\n",
+    "    # x1 = np.array([anchor[0] - (y_max - anchor[1])*np.sin(theta), y_max])\n",
+    "    # x0 = np.array([anchor[0] + (anchor[1] - y_min)*np.sin(theta), y_min])\n",
+    "    x0 = anchor\n",
+    "    if angle_to_corner < theta:\n",
+    "        # endpoint at top\n",
+    "        x1 = np.array([anchor[0] + (anchor[1] - y_min) * np.tan(theta), y_min])\n",
+    "    else:\n",
+    "        # endpoint on left side\n",
+    "        x1 = np.array([x_min, anchor[1] + (anchor[0] - x_min) / np.tan(theta)])\n",
+    "    # x1 = np.array([anchor[0] - (y_max - anchor[1])*np.sin(theta), y_max])\n",
+    "    line = np.vstack((x0, x1)).T\n",
+    "    plt.plot(*line, color=\"w\")\n",
+    "    plt.gca().add_artist(plt.Circle(anchor, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
+    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))"
    ]
   },
   {
