Fixed quadrant handling.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/171115 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/171115 Prototyping.ipynb
@@ -542,7 +542,7 @@
     "    return x0, x1\n",
     "\n",
     "\n",
-    "theta = -0.4  # -1.7#np.pi/2#0#-0.245107021791\n",
+    "theta = np.pi - 0.24  # +np.pi#-.4#-1.7#np.pi/2#0#-0.245107021791\n",
     "x_min = y_min = 0\n",
     "x_max, y_max = label_img_rot.shape\n",
     "plt.figure(figsize=(12, 12))\n",
@@ -554,7 +554,6 @@
     "plt.gca().add_artist(plt.Circle(anchor1, 50, color=\"gray\"))\n",
     "for s in np.linspace(0, 1, 50)[1:-1]:\n",
     "    anchor = (1 - s) * anchor0 + s * anchor1\n",
-    "    angle_to_corner = np.arctan2(-anchor[0], anchor[1])\n",
     "    # print(angle_to_corner)\n",
     "    # x0 = np.array([anchor[0], y_min])\n",
     "    # x1 = np.array([anchor[0], y_max])\n",
@@ -562,12 +561,28 @@
     "    # x1 = np.array([anchor[0] - (y_max - anchor[1])*np.sin(theta), y_max])\n",
     "    # x0 = np.array([anchor[0] + (anchor[1] - y_min)*np.sin(theta), y_min])\n",
     "    x0 = anchor\n",
-    "    if angle_to_corner < theta:\n",
-    "        # endpoint at top\n",
-    "        x1 = np.array([anchor[0] + (anchor[1] - y_min) * np.tan(theta), y_min])\n",
+    "    if -3 / 4 * np.pi < theta < np.pi / 4:\n",
+    "        x, y = x_min, y_min\n",
+    "        angle_to_corner = np.arctan2(-anchor[0], anchor[1])\n",
     "    else:\n",
-    "        # endpoint on left side\n",
-    "        x1 = np.array([x_min, anchor[1] + (anchor[0] - x_min) / np.tan(theta)])\n",
+    "        x, y = x_max, y_max\n",
+    "        angle_to_corner = -np.arctan2(anchor[0] - x_max, -(y_max - anchor[1]))\n",
+    "    # angle_to_corner = np.arctan2(-anchor[0], anchor[1])\n",
+    "    # angle_to_corner = np.arctan2(x-anchor[0], y+anchor[1])\n",
+    "    print(angle_to_corner, theta)\n",
+    "    # print((angle_to_corner + 2*np.pi) % (np.pi))\n",
+    "    # if angle_to_corner < (theta % np.pi/2):\n",
+    "    # if (angle_to_corner + 2*np.pi) % (np.pi) < theta:\n",
+    "    # print('>>', (angle_to_corner + np.pi) % (np.pi))\n",
+    "    # if True:\n",
+    "    # if ((-angle_to_corner + np.pi) % np.pi) < theta:\n",
+    "    if angle_to_corner < theta:\n",
+    "        # endpoint at top/bottom\n",
+    "        # x1 = anchor\n",
+    "        x1 = np.array([anchor[0] + (anchor[1] - y) * np.tan(theta), y])\n",
+    "    else:\n",
+    "        # endpoint on side\n",
+    "        x1 = np.array([x, anchor[1] + (anchor[0] - x) / np.tan(theta)])\n",
     "    # x1 = np.array([anchor[0] - (y_max - anchor[1])*np.sin(theta), y_max])\n",
     "    line = np.vstack((x0, x1)).T\n",
     "    plt.plot(*line, color=\"w\")\n",
